--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -18,5 +18,14 @@
         <![endif]-->
         
         <script src="../js/main.js" async defer></script>
+        <!-- <h1 style="background-color: chocolate;">
+            Welcome to Day 2
+        </h1> -->
     </body>
 </html>
+
+<style>
+    h1{
+        background-color: rgb(192, 57, 57);
+    }
+</style>
