--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,10 @@
         <!-- <h1 style="background-color: chocolate;">
             Welcome to Day 2
         </h1> -->
+            <button onclick="generateCar('green')">GENERATE</button>
+            <div id="msg" class="msg">
+                
+            </div>
     </body>
 </html>
 
@@ -28,4 +32,9 @@
     h1{
         background-color: rgb(192, 57, 57);
     }
+.msg{
+width:200px;height: 200px;
+background-color: cornflowerblue;
+font-size: large;
+}
 </style>
