--- a/html/login.html
+++ b/html/login.html
@@ -1,16 +1,69 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login</title>
     <link rel="stylesheet" href="../css/login.css" />
     <script src="../js/login.js"></script>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    
   </head>
   <body class="container">
-    <div class="login-dialog">
-      <input onblur="validate('email','err_email')" type="email" placeholder="Enter Email" id="email" />
-      <span id="err_email" class="error"> Cannnot be left blank </span>
-      <input onblur="validate('password','err_password')" placeholder="Enter Password" type="password" id="password" />
-      <span id="err_password" class="error"> Cannnot be left blank </span>
-      <button onclick="login()" id="login">Login</button>
+    <h1>Login here!</h1>
+    <div class="login-dialog shadow p-3 mb-5 bg-body rounded">
+      <div class="form-floating mb-3">
+        <input
+          onblur="validate('email','err_email')"
+          type="email"
+          class="form-control"
+          id="email"
+          placeholder="name@example.com"
+        />
+        <label for="email">Email address</label>
+      </div>
+      <span class="error" id="err_email">Email cannot be left blank</span>
+      <div class="form-floating">
+        <input
+                  onblur="validate('password','err_password')"
+          type="password"
+          class="form-control"
+          id="password"
+          placeholder="Password"
+        />
+        <label for="password">Password</label>
+      </div>
+      <span class="error" id="err_password">Password cannot be left blank</span>
+      <button
+      style="margin-top:15px"
+        type="button"
+        class="btn btn-primary"
+        onclick="login()"
+        id="login"
+      >
+        Login
+      </button>
     </div>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
