--- a/html/login.html
+++ b/html/login.html
@@ -7,6 +7,10 @@
     <title>Login</title>
     <link rel="stylesheet" href="../css/login.css" />
     <script src="../js/login.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,46 +19,55 @@
       crossorigin="anonymous"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body class="container">
     <h1>Login here!</h1>
     <div class="animate__animated animate__backInDown">
-         <div class="login-dialog shadow p-3 mb-5 bg-body rounded animate__backInDown">
-      <div class="form-floating mb-3">
-        <input
-          onblur="validate('email','err_email')"
-          type="email"
-          class="form-control"
-          id="email"
-          placeholder="name@example.com"
-        />
-        <label for="email">Email address</label>
-      </div>
-      <span class="error" id="err_email">Email cannot be left blank</span>
-      <div class="form-floating">
-        <input
-                  onblur="validate('password','err_password')"
-          type="password"
-          class="form-control"
-          id="password"
-          placeholder="Password"
-        />
-        <label for="password">Password</label>
-      </div>
-      <span class="error" id="err_password">Password cannot be left blank</span>
-      <button
-      style="margin-top:15px"
-        type="button"
-        class="btn btn-primary"
-        onclick="login()"
-        id="login"
+      <div
+        class="login-dialog shadow p-3 mb-5 bg-body rounded animate__backInDown"
       >
-        Login
-      </button>
-    </div>
+        <div class="input-group mb-6">
+          <span class="input-group-text" id="basic-addon1">
+            <i class="bi bi-envelope"></i>
+          </span>
+          <input
+            onblur="validate('email','err_email')"
+            onchange="validateEmail()"
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="name@example.com"
+          />
+        </div>
+
+        <span class="error" id="err_email">Email cannot be left blank</span>
+        <div class="form-floating">
+          <input
+            onblur="validate('password','err_password')"
+            type="password"
+            class="form-control"
+            id="password"
+            placeholder="Password"
+          />
+          <label for="password">Password</label>
+        </div>
+        <span class="error" id="err_password"
+          >Password cannot be left blank</span
+        >
+        <button
+          style="margin-top: 15px"
+          type="button"
+          class="btn btn-primary"
+          onclick="login()"
+          id="login"
+        >
+          Login
+          <i class="bi bi-box-arrow-in-right"></i>
+        </button>
+      </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
