--- a/html/login.html
+++ b/html/login.html
@@ -22,6 +22,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+
   </head>
   <body class="container">
     <h1>Login here!</h1>
@@ -31,7 +33,9 @@
       >
         <div class="input-group mb-6">
           <span class="input-group-text" id="basic-addon1">
-            <i class="bi bi-envelope"></i>
+            <!-- <i class="bi bi-envelope"></i> -->
+            <i class="icon ion-md-send"></i>
+
           </span>
           <input
             onblur="validate('email','err_email')"
