--- a/html/login.html
+++ b/html/login.html
@@ -45,7 +45,7 @@
             id="email"
             placeholder="name@example.com"
           />
-<span class="error invalid-feedback" id="err_email">Email cannot be left blank</span>
+<span class="invalid-feedback" id="err_email">Email cannot be left blank</span>
         
         </div>
         <div class="form-floating">
@@ -58,7 +58,7 @@
           />
           <label for="password">Password</label>
         </div>
-        <span class="error" id="err_password"
+        <span class="invalid-feedback" id="err_password"
           >Password cannot be left blank</span
         >
         <button
